--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,14 @@ dependencies:
   tflite_flutter: ^0.12.1
   firebase_core: ^4.2.1
   firebase_ai: ^3.5.0
+  firebase_performance: ^0.11.1+2
+  flutter_processing: ^0.2.0
+  cached_network_image: ^3.4.1
+  flutter_native_splash: ^2.2.16
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
